# ai-ad-optimzation-aws

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  HOW_IT_WORKS.txt  MVP_PLAN.md  docker-compose.yml  pyproject.toml  readme.MD  render.yaml
configs/: settings.py
dags/: daily_optimization_dag.py
migrations/: 001_schema.sql
mlruns/0/: meta.yaml
mlruns/388468250005443919/: meta.yaml
mlruns/388468250005443919/31af071bd6be435fbbe50e452a6dcd0e/: meta.yaml
mlruns/388468250005443919/43996028f4c3449895ff60de313d6d01/: meta.yaml
mlruns/388468250005443919/7f1b29e7f85c4b80a60e80034f689dec/: meta.yaml
mlruns/388468250005443919/94c699507e054585a744c8cd9f9d4144/: meta.yaml
mlruns/388468250005443919/a8941f4d287142d5adbf7da351b8f2a0/: meta.yaml
mlruns/388468250005443919/ac6454750c434d6baf9c11207276f913/: meta.yaml
mlruns/388468250005443919/b5c1107f88a947faa46622e54ac3add2/: meta.yaml
mlruns/388468250005443919/ba78b2ba49b645f6be96c6097d44909f/: meta.yaml
mlruns/388468250005443919/c85b9f3a4a584d8581e25157eb4a5775/: meta.yaml
mlruns/388468250005443919/d2232a037a7947078ce60a60cb8272d7/: meta.yaml
scripts/: run_features.py  run_optimization.py  run_training.py  seed_demo_data.py
src/api/: main.py
src/automation/: executor.py
src/dashboard/: app.py  shared.py
src/data_ingestion/: ads_api_client.py  data_loader.py  sp_api_client.py
src/database/: connection.py
src/features/: feature_engineering.py
src/models/: inference.py  training.py
src/optimization/: bid_optimizer.py  budget_allocator.py  campaign_creator.py  keyword_manager.py
(+94 files in other folders)
